# ctx-pack

./: .gitignore  README.md  ctx_pack_output.txt  pyproject.toml
src/ctx_pack/: cli.py  constants.py  core.py
src/ctx_pack.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
