[project]
name = "ctx-pack"
version = "0.1.0"
description = "CLI tool to consolidate, minify, and package source code for AI context."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "google-generativeai>=0.3.0",
]

[project.scripts]
ctx-pack = "ctx_pack.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
